chai added to dev dependencies

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/sfakir/feiertagejs",
   "devDependencies": {
+    "chai": "^3.2.0",
     "mocha": "^2.2.5"
   }
 }
