--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "feiertagejs",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "A module to calculate German holidays made for node.js",
   "main": "lib/feiertage.js",
   "scripts": {
-    "test": "env TZ='Europe/Berlin' mocha spec/*"
+    "test": "NODE_ENV=test env TZ='Europe/Berlin' mocha spec/*"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/sfakir/feiertagejs",
   "devDependencies": {
     "chai": "^3.2.0",
+    "lodash": "^4.15.0",
     "mocha": "^2.2.5"
   }
 }
