--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "feiertagejs",
-  "version": "1.1.8",
-  "description": "A module to calculate German holidays made for node.js",
-  "main": "lib/feiertage.js",
-  "scripts": {
-    "test": "NODE_ENV=test env TZ='Europe/Berlin' mocha spec/*"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sfakir/feiertagejs"
-  },
-  "keywords": [
-    "node",
-    "holidays",
-    "feiertage",
-    "javascript"
-  ],
-  "author": "Simon Fakir",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sfakir/feiertagejs/issues"
-  },
-  "homepage": "https://github.com/sfakir/feiertagejs",
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "lodash": "^4.15.0",
-    "mocha": "^3.5.3"
-  }
+    "name": "feiertagejs",
+    "version": "1.1.8",
+    "description": "A module to calculate German holidays made for node.js",
+    "main": "lib/feiertage.js",
+    "scripts": {
+        "test": "NODE_ENV=test env TZ='Europe/Berlin' mocha spec/*",
+        "format": "prettier --single-quote --write '{**/*,*}.{js,json}' '!coverage/**'"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/sfakir/feiertagejs"
+    },
+    "keywords": ["node", "holidays", "feiertage", "javascript"],
+    "author": "Simon Fakir",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/sfakir/feiertagejs/issues"
+    },
+    "homepage": "https://github.com/sfakir/feiertagejs",
+    "devDependencies": {
+        "chai": "^4.1.2",
+        "lodash": "^4.15.0",
+        "mocha": "^3.5.3",
+        "prettier": "^1.7.2"
+    }
 }
