--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/sfakir/feiertagejs",
   "devDependencies": {
     "babel-eslint": "^8.0.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-flow": "^6.23.0",
     "chai": "^4.1.2",
     "eslint": "^4.8.0",
     "eslint-plugin-flowtype": "^2.39.1",
@@ -33,5 +35,19 @@
     "lodash": "^4.15.0",
     "mocha": "^4.0.1",
     "prettier": "^1.7.4"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "browsers": ["> 1%"],
+            "node": ["4"]
+          }
+        }
+      ],
+      "flow"
+    ]
   }
 }
