--- a/package.json
+++ b/package.json
@@ -7,19 +7,15 @@
     "test": "jest",
     "test:ci": "jest --run-in-band",
     "test:w": "jest --watch",
-    "format": "prettier --single-quote --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**'",
+    "format":
+      "prettier --single-quote --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**'",
     "flow": "flow"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/sfakir/feiertagejs"
   },
-  "keywords": [
-    "node",
-    "holidays",
-    "feiertage",
-    "javascript"
-  ],
+  "keywords": ["node", "holidays", "feiertage", "javascript"],
   "author": "Simon Fakir",
   "license": "MIT",
   "bugs": {
@@ -44,12 +40,8 @@
         "env",
         {
           "targets": {
-            "browsers": [
-              "> 1%"
-            ],
-            "node": [
-              "4"
-            ]
+            "browsers": ["> 1%"],
+            "node": ["4"]
           }
         }
       ],
@@ -58,10 +50,6 @@
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": [
-      "html",
-      "text",
-      "lcov"
-    ]
+    "coverageReporters": ["html", "text", "lcov"]
   }
 }
