--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "test": "jest",
     "test:ci": "jest --run-in-band",
     "test:w": "jest --watch",
-    "format":
-      "prettier --single-quote --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**'",
+    "format": "prettier --single-quote --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**'",
     "flow": "flow",
     "build": "rollup -c",
-    "prepublish": "npm test && npm run build"
+    "build:flow": "flow-copy-source src build",
+    "prepublish": "npm test && npm run build && npm run build:flow"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/sfakir/feiertagejs"
   },
-  "keywords": ["node", "holidays", "feiertage", "javascript"],
+  "keywords": [
+    "node",
+    "holidays",
+    "feiertage",
+    "javascript"
+  ],
   "author": "Simon Fakir",
   "license": "MIT",
   "bugs": {
@@ -34,6 +39,7 @@
     "eslint": "^4.8.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "flow-bin": "^0.56.0",
+    "flow-copy-source": "^1.2.1",
     "jest": "20",
     "lodash": "^4.15.0",
     "prettier": "^1.7.4",
@@ -46,8 +52,12 @@
         "env",
         {
           "targets": {
-            "browsers": ["> 1%"],
-            "node": ["4"]
+            "browsers": [
+              "> 1%"
+            ],
+            "node": [
+              "4"
+            ]
           },
           "modules": false
         }
@@ -69,6 +79,10 @@
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": ["html", "text", "lcov"]
+    "coverageReporters": [
+      "html",
+      "text",
+      "lcov"
+    ]
   }
 }
