--- a/package.json
+++ b/package.json
@@ -8,24 +8,23 @@
     "test": "jest",
     "test:ci": "jest --runInBand",
     "test:w": "jest --watch",
-    "format": "prettier --single-quote --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**' '!build/**'",
+    "format":
+      "prettier --single-quote --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**' '!build/**'",
     "flow": "flow",
     "build": "rollup -c",
-    "build:doc": "documentation build src/**.js -f md -o docs.md --document-exported",
+    "build:doc":
+      "documentation build src/**.js -f md -o docs.md --document-exported",
     "build:flow": "flow-copy-source src build",
-    "prepublishOnly": "npm test && npm run build && npm run build:flow && npm run build:doc",
-    "prepare": "npm test && npm run build && npm run build:flow && npm run build:doc"
+    "prepublishOnly":
+      "npm test && npm run build && npm run build:flow && npm run build:doc",
+    "prepare":
+      "npm test && npm run build && npm run build:flow && npm run build:doc"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/sfakir/feiertagejs"
   },
-  "keywords": [
-    "node",
-    "holidays",
-    "feiertage",
-    "javascript"
-  ],
+  "keywords": ["node", "holidays", "feiertage", "javascript"],
   "author": "Simon Fakir",
   "license": "MIT",
   "bugs": {
@@ -55,12 +54,8 @@
         "env",
         {
           "targets": {
-            "browsers": [
-              "> 1%"
-            ],
-            "node": [
-              "4"
-            ]
+            "browsers": ["> 1%"],
+            "node": ["4"]
           },
           "modules": false
         }
@@ -82,15 +77,7 @@
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": [
-      "html",
-      "text",
-      "lcov"
-    ]
+    "coverageReporters": ["html", "text", "lcov"]
   },
-  "files": [
-    "build",
-    "docs.md",
-    "Readme.md"
-  ]
+  "files": ["build", "docs.md", "Readme.md"]
 }
