--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --runInBand",
     "test:w": "jest --watch",
     "format":
-      "prettier --single-quote --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**' '!build/**'",
+      "prettier --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**' '!build/**'",
     "flow": "flow",
     "build": "rollup -c",
     "build:doc":
