--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
   "scripts": {
     "test": "jest --runInBand",
     "test:w": "jest --watch",
-    "format":
-      "prettier --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**' '!build/**'",
+    "format": "prettier --write '{**/*,*}.{js,json}' '!coverage/**' '!flow-typed/**' '!build/**'",
     "flow": "flow",
     "build": "rollup -c",
-    "build:doc":
-      "documentation build src/**.js -f md -o docs.md --document-exported",
+    "build:doc": "documentation build src/**.js -f md -o docs.md --document-exported",
     "build:flow": "flow-copy-source src build"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/sfakir/feiertagejs"
   },
-  "keywords": ["node", "holidays", "feiertage", "javascript"],
+  "keywords": [
+    "node",
+    "holidays",
+    "feiertage",
+    "javascript"
+  ],
   "author": "Simon Fakir",
   "license": "MIT",
   "bugs": {
@@ -47,8 +50,12 @@
         "env",
         {
           "targets": {
-            "browsers": ["> 1%"],
-            "node": ["4"]
+            "browsers": [
+              "> 1%"
+            ],
+            "node": [
+              "4"
+            ]
           },
           "modules": false
         }
@@ -70,7 +77,15 @@
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": ["html", "text", "lcov"]
+    "coverageReporters": [
+      "html",
+      "text",
+      "lcov"
+    ]
   },
-  "files": ["build", "docs.md", "Readme.md"]
+  "files": [
+    "build",
+    "docs.md",
+    "Readme.md"
+  ]
 }
