--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A module to calculate German holidays made for node.js",
   "main": "build/feiertage.umd.js",
   "module": "build/feiertage.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "jest --runInBand",
     "test:w": "jest --watch",
@@ -87,6 +88,7 @@
   "files": [
     "build",
     "docs.md",
-    "Readme.md"
+    "Readme.md",
+    "index.d.ts"
   ]
 }
