--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "noEmit": true,
     "target": "es2016",
-    "strict": true
+    "strict": true,
+    "noUnusedLocals": true
   }
 }
