--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-plugin-flowtype": "^2.50.3",
     "flow-bin": "^0.64.0",
     "flow-copy-source": "^1.2.1",
-    "jest": "22.1.4",
+    "jest": "^23.6.0",
     "prettier": "^1.14.3",
     "rollup": "^0.55.1",
     "rollup-plugin-babel": "^3.0.7",
