build: specify node 8 as minimum supported engine

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "feiertage",
     "javascript"
   ],
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "author": "Simon Fakir",
   "license": "MIT",
   "bugs": {
