--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "jest --runInBand",
     "test:w": "jest --watch",
-    "lint": "tslint -p tsconfig.json -t stylish",
+    "lint": "eslint \"src\" \"spec\"",
     "format": "prettier --write '{**/*,*}.{ts,json}' '!coverage/**' '!build/**' '!package.json'",
     "build": "rollup -c"
   },
@@ -33,15 +33,16 @@
   "homepage": "https://github.com/sfakir/feiertagejs",
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^27.1.7",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "rollup": "^2.62.0",
     "rollup-plugin-typescript": "^1.0.0",
     "ts-jest": "^27.1.2",
-    "tslint": "^5.20.1",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^4.5.4"
   },
   "jest": {
