--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "devDependencies": {
     "@vitest/coverage-c8": "^0.26.2",
     "prettier": "^2.8.1",
-    "rollup": "^2.62.0",
-    "rollup-plugin-typescript": "^1.0.0",
+    "rollup": "^3.9.0",
+    "@rollup/plugin-typescript": "^10.0.1",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
