--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "rollup": "^3.9.0",
     "@rollup/plugin-typescript": "^10.0.1",
     "typescript": "^4.9.4",
-    "vitest": "^0.26.2"
+    "vitest": "^0.26.2",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
