--- a/package.json
+++ b/package.json
@@ -42,20 +42,8 @@
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^27.1.7"
+    "eslint-config-prettier": "^8.5.0"
     },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "collectCoverage": true,
-    "coverageReporters": [
-      "html",
-      "text",
-      "lcov"
-    ]
-
-  },
   "files": [
     "build",
     "docs.md",
