--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "feiertagejs",
-  "version": "1.3.6",
+  "version": "1.4.0",
   "description": "A module to calculate German holidays made for node.js",
-  "main": "build/feiertage.umd.js",
+  "type": "module",
+  "main": "build/feiertage.umd.cjs",
   "module": "build/feiertage.js",
   "types": "index.d.ts",
   "scripts": {
